@@ -678,6 +678,22 @@ examples/poll
 
   CONFIGURED_APPS += uiplib
 
+examples/pwm
+^^^^^^^^^^^^
+
+  A test of a PWM device driver. It simply enables a pulsed output for
+  a specified frequency and duty for a specified period of time.  This
+  example can ONLY be built as an NSH built-in function.
+
+    CONFIG_NSH_BUILTIN_APPS - Build the PWM test as an NSH built-in function.
+      Default: Not built!  The example can only be used as an NSH built-in
+      application
+    CONFIG_EXAMPLES_PWM_DEVPATH - The path to the PWM device. Default: /dev/pwm0
+    CONFIG_EXAMPLES_PWM_FREQUENCY - The initial PWM frequency.  Default: 100 Hz
+    CONFIG_EXAMPLES_PWM_DUTYPCT - The initial PWM duty as a percentage.  Default: 50%
+    CONFIG_EXAMPLES_PWM_DURATION - The initial PWM pulse train duration in sectonds.
+       as a percentage.  Default: 5 seconds
+
 examples/rgmp
 ^^^^^^^^^^^^^
 
